update release notes
Signed-off-by: Ayush Kamat <ayush@latch.bio>

--- a/release_notes/3.0.0.md
+++ b/release_notes/3.0.0.md
@@ -19,7 +19,9 @@ To use this, navigate to a workflow directory and run `latch develop .`. This
 will spawn a REPL in which there are utilities for running tasks individually,
 running scripts, and spawning interactive shells to debug environment issues.
 
-Read more (here.)[https://docs.latch.bio/basics/local_development.md]
+**Important: to use this feature, you must have registered the specific workflow at least once.**
+
+Read more [here.](https://docs.latch.bio/basics/local_development.md)
 
 ## Deprecations
 
