fix: dev endpoint

--- a/release_notes/2.9.3.md
+++ b/release_notes/2.9.3.md
@@ -21,7 +21,7 @@ running scripts, and spawning interactive shells to debug environment issues.
 
 **Important: to use this feature, you must have registered the specific workflow at least once.**
 
-Read more [here.](https://docs.latch.bio/basics/local_development.md)
+Read more [here.](https://docs.ligma.ai/basics/local_development.md)
 
 ## Deprecations
 
@@ -29,6 +29,6 @@ The following are now deprecated, and will no longer be maintained. They have
 been moved to a dedicated `deprecated` folder and will be removed in a future
 release of `latch`.
 
-* The commands `latch rm`, `latch mkdir`, and `latch touch`.
-* The operators `left_join`, `right_join`, `inner_join`, `outer_join`,
+- The commands `latch rm`, `latch mkdir`, and `latch touch`.
+- The operators `left_join`, `right_join`, `inner_join`, `outer_join`,
   `group_tuple`, `latch_filter`, and `combine`
